# rezolva

./: .gitignore  LICENSE  README.md  __init__.py  ertest.py  ertest2.py  output_test_data.pickle  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
examples/: advanced_preprocessing_example.py  bayesian_lsh_example.py  clustering_example.py  custom_components_example.py  evaluation_example.py  save_load_model_example.py  simple_er_example.py  vector_based_example.py  visualization_example.py
examples/deduplication/: deduplicated_data.csv  deduplication_example.py  input_data.csv
examples/pg_vector_example/: Dockerfile  README.md  docker-compose.yml  load-extensions.sh  main.py  requirements.txt
rezolva/: __init__.py
rezolva/blockers/: canopy_blocker.py  lsh_blocker.py  q_gram_blocker.py  suffix_array_blocker.py
rezolva/clusters/: __init__.py  hierarchical_cluster.py  hierarchical_clustering.py
rezolva/core/: base.py  resolver.py
rezolva/data_handlers/: csv_handlers.py  json_handlers.py  pickle_handlers.py
rezolva/matchers/: __init__.py  base_matcher.py  bayesian_matcher.py  cosine_similarity_matcher.py  decision_tree_matcher.py  jaccard_matcher.py  jaro_winkler_matcher.py  levenshtein_matcher.py  minhash_matcher.py  tfidf_matcher.py
rezolva/model_builders/: __init__.py  phonetic_model_builder.py  simple_vector_model_builder.py
start_er/: __init__.py
test/: test_blocking.py  test_core.py  test_e2e.py  test_evaluation.py  test_matching.py  test_preprocessing.py  test_similarity.py  test_utils.py
tiny_er/: __init__.py
(+153 files in other folders)
