[project]
name = "start-er"
version = "0.1.0"
authors = [
  { name="Josh Meek", email="mail@josh.dev" },
]
description = "A minimalist entity resolution library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/joshmeek/start-er"
